2006-06-08  Karl Runge <runge@karlrunge.com>
	* x11vnc: XOpenDisplay wrapper for raw xauth data, -unixpw 
	  su_verify() to run any cmd, -users unixpw= mode. -display WAIT:...
	  modes for delayed X display opening and dynamic choosing.

2006-06-03  Karl Runge <runge@karlrunge.com>
	* x11vnc: -capslock and -skip_lockkeys options.  map some Alt keys
	  to Latin under linuxfb.  switch to new stats API.  Handle more
	  cases carefully when switching fb.
	
2006-05-06  Karl Runge <runge@karlrunge.com>
	* x11vnc: improved support for webcams and tv tuners with
	  video4linux /dev/video: -rawfb video, -freqtab etc.
	  Convenience option for linux VT's: -rawfb cons (LinuxVNC
	  method).  -pipeinput builtins for video and console.
	  -24to32 option to avoid 24bpp problems. "snap:" method for
	  -rawfb.

2006-04-26  Karl Runge <runge@karlrunge.com>
	* x11vnc: skip exit in check_openssl() if not compiled with
	  libssl.  set SKIP_HELP (again) in small footprint builds.

2006-04-16  Karl Runge <runge@karlrunge.com>
	* x11vnc: More web proxy work for Java SSL applet and wrapper
	  script ssl_vncviewer.  Apache SSL gateway support for
	  incoming x11vnc connections.  Handle "double proxy" case.

2006-04-05  Karl Runge <runge@karlrunge.com>
	* x11vnc: add FBPM support (-fbpm) for Suns. -rawfb ZERO for
	  testing.  Basic key+cert management utilities: -sslGenCA,
	  -sslGenCert, -sslEncKey, -sslDelCert, -sslCertInfo, and
	  addln features.  SSL proxy connection.  -storepasswd with
	  no args or pw echo.

2006-03-26  Karl Runge <runge@karlrunge.com>
	* x11vnc: -xinerama now on by default.  In -ssl mode accept https
	  applet downloads thru VNC port.  -https option for 2nd https
	  port.  Look for classes/ssl under -http.  add Java URL messages
	  to final output lines.  make -inetd work with -ssl (even for
	  https).  fix -unixpw login prompt under -scale.  guard against
	  clientData = NULL. 

2006-03-11  Karl Runge <runge@karlrunge.com>